--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,3 +1,5 @@
+<% if current_user==@user %>
+
 <div class="row">
   <div class="large-12 columns">
     <div class="large-2 columns">
@@ -15,3 +17,7 @@
     </div>
   </div>
 </div>
+
+<% else %>
+    <p>Yetkiniz Yok</p>
+<% end %>
