--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,7 @@
         <div class="contain-to-grid">
           <nav class="top-bar" data-topbar>
             <ul class="title-area">
-              <h2><a href="">Arduino Smart Home</a></h2>
+              <h2><%= link_to "Arduino Smart Home",root_path   %></h2>
             </ul>
             <section class="top-bar-section">
               <ul class="right">
@@ -33,6 +33,8 @@
                 <li class="divider"></li>
                 <li><%= link_to "Oturum Aç",login_path,method: :get  %></li>
                 <li class="divider"></li>
+                 <li><%= link_to "Hakkında",login_path,method: :get  %></li>
+                    <li class="divider"></li>
                     <% end %>
               </ul>
             </section>
@@ -40,6 +42,7 @@
         </div>
         <div class="row">
           <%= yield %>
+
         </div>
 
 
