--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -33,13 +33,13 @@
 
                    </li>
                     <li class="divider"></li>
-                    <li><%= link_to "Hakkında",login_path,method: :get  %></li>
+                    <li><%= link_to "Hakkında",about_path,method: :get  %></li>
                     <li class="divider"></li>
                     <% else %>
                 <li class="divider"></li>
                 <li><%= link_to "Oturum Aç",login_path,method: :get  %></li>
                 <li class="divider"></li>
-                 <li><%= link_to "Hakkında",login_path,method: :get  %></li>
+                 <li><%= link_to "Hakkında",about_path,method: :get  %></li>
                     <li class="divider"></li>
                     <% end %>
               </ul>
