--- a/app/views/about/index.html.erb
+++ b/app/views/about/index.html.erb
@@ -1,2 +1,11 @@
-<h1>About#index</h1>
-<p>Find me in app/views/about/index.html.erb</p>
+<div class="row">
+  <div class="large-12 columns">
+    <h1>Arduino Akıllı Ev Nedir?</h1>
+  </div>
+  <hr/>
+  <div class="large-12 columns">
+    <p>
+      Arduino akıllı ev Arduino UNO ile tasarlanan bir evin,web üzerinden kontrol edilmesini sağlayan bir uygulamadır.
+    </p>
+  </div>
+</div>
