--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,5 +1,5 @@
 <div class="row">
- <div class="large-7 medium-6 small-12 columns">
+ <div class="large-12 columns">
    <h2>KAYIT</h2>
    <%= render 'form' %>
  </div>
